--- a/michael-preciado-website/package.json
+++ b/michael-preciado-website/package.json
@@ -15,8 +15,8 @@
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.22.2",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^6.22.2",
     "three": "^0.175.0"
   },
   "devDependencies": {
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "terser": "^5.43.1",
     "vite": "^6.2.0"
   }
 }
