Update Vercel configuration to include build and install commands, and specify output directory for deployment.

--- a/michael-preciado-website/vercel.json
+++ b/michael-preciado-website/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "cd michael-preciado-website && npm run build",
+  "outputDirectory": "michael-preciado-website/dist",
+  "installCommand": "cd michael-preciado-website && npm install",
   "rewrites": [
     {
       "source": "/(.*)",
