--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd michael-preciado-website && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "michael-preciado-website/dist",
-  "installCommand": "cd michael-preciado-website && npm install",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/(.*)",
