Update Vercel configuration to exclude specific file types from rewrites and change demo link for Flappy Dog game project.

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "installCommand": "npm install",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!images|js|css|videos|.*\\..*).*)",
       "destination": "/index.html"
     }
   ],
